# zen-clock

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.ai.md  README.md  format.bat  format.sh  partitions.csv  patch_ui.bat  platformio.ini  sdkconfig.lilygo-t-display-s3  wifi_config.csv.example
SquareLine/: ZenClock-ui.sll  ZenClock-ui.slp  ZenClock-ui.spj  project.info
components/: microlink  wireguard_lwip
components/ble_provisioning/: CMakeLists.txt  idf_component.yml
components/bsp/: CMakeLists.txt  README.md
components/bsp/include/: bsp.h
components/bsp/priv_include/: bsp_priv.h
components/bsp/src/: bsp_backlight.c  bsp_battery.c  bsp_buttons.c  bsp_display.c
components/deep_sleep/: CMakeLists.txt  README.md
components/ui/: CMakeLists.txt  README.md  clock_face.h  clock_face_text.c  device_info_screen.c  device_info_screen.h  menu_screen.c  menu_screen.h  nav.c  nav.h  project.info  prov_screen.c  prov_screen.h  settings_screen.c  settings_screen.h  status_bar.c  status_bar.h  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_utils.c  ui_utils.h
components/ui/components/: ui_comp_hook.c
components/ui/fonts/: lv_font_ds_digital_16.c  lv_font_ds_digital_16.h  lv_font_ds_digital_48.c  lv_font_ds_digital_48.h
components/ui/screens/: ui_Screen1.c  ui_Screen1.h
docs/: clang-tidy-suppressions.md
include/: board_config.h
include/fonts/: font_8x8.h
scripts/: fix_compiledb.py  format.py  gen_wifi_creds.py
src/: CMakeLists.txt  app_handlers.c  app_handlers.h  idf_component.yml  main.c
(+38 files in other folders)
